# ComputerGraphics-Labs

./: README.md
RG-Lab1/: .clang-format  RG-Lab1.sln  RG-Lab1.vcxproj  RG-Lab1.vcxproj.filters
RG-Lab1/src/: BSplineCurve.cpp  BSplineCurve.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Input.h  PerspectiveCameraController.cpp  Shader.cpp  Shader.h  main.cpp
RG-Lab1/src/shaders/: vertex.glsl  (+2 more)
RG-Lab2/: RG-Lab2.sln  RG-Lab2.vcxproj  RG-Lab2.vcxproj.filters
RG-Lab2/src/: BSplineCurve.cpp  BSplineCurve.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Input.cpp  Particle.cpp  Particle.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  Shader.cpp  Shader.h  main.cpp
RG-Lab3/Neon/: .clang-format  CMakeLists.txt  imgui.ini
RG-Lab3/Neon/src/: Application.cpp  Application.h  Sandbox3D.cpp  Sandbox3D.h  main.cpp  neopch.h
RG-Lab3/Neon/src/Core/: Allocator.cpp  Allocator.h  ImGuiLayer.cpp  ImGuiLayer.h  Input.cpp  Input.h  Layer.h  LayerStack.cpp  LayerStack.h
RG-Lab3/Neon/src/Event/: ApplicationEvent.h  Event.h  KeyEvent.h
RG-Lab3/Neon/src/Renderer/: Context.cpp  Context.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  GraphicsPipeline.cpp  GraphicsPipeline.h  LogicalDevice.cpp  LogicalDevice.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  PhysicalDevice.cpp  PhysicalDevice.h  RenderPass.cpp  RenderPass.h  SwapChain.cpp  SwapChain.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h
RG-Lab3/Neon/src/Scene/: Animation.cpp  Animation.h  Bone.h  Components.cpp  Components.h  Entity.h  Scene.cpp  Scene.h
RG-Lab3/Neon/src/Shaders/: compile.bat
RG-Lab3/Neon/src/Shaders/src/: material.glsl  shader_frag.frag  shader_frag_skydome.frag  shader_frag_terrain.frag  shader_frag_water.frag  shader_vert.vert  shader_vert_animation.vert  shader_vert_skydome.vert  shader_vert_terrain.vert  shader_vert_water.vert
RG-Lab3/Neon/src/Tools/: FileTools.cpp  FileTools.h
RG-Lab3/Neon/src/Window/: Window.cpp  Window.h
(+6 files in other folders)
